2018-02-19  Allen D. Ball  <ball@sol.local>

	* Initial writing.
