@@ -1,0 +1,3 @@
+# $Id$
+
+greeting: Hello, World!
