@@ -1,3 +1,7 @@
+2018-02-25  Allen D. Ball  <ball@sol.local>
+
+	* Added application.properties to template example.
+
 2018-02-19  Allen D. Ball  <ball@sol.local>
 
 	* Initial writing.
